# edgy

./: .gitignore  CMakeLists.txt  edgy.cpp  edgy_cuda.cu  edgy_omp.cpp
